# rust-todo

./: Cargo.toml
src/: main.rs
src/app/todo/: mod.rs  repo.rs  types.rs
src/components/: todo.rs
src/entities/: mod.rs  person.rs  todo_item.rs
src/ui/: mod.rs
src/ui/pages/: mod.rs  page_base.rs
src/ui/todo/: todo_item.rs  todo_list.rs
